--- a/resume-web/src/app/user/pages/resume-management/components/resume-management-preview/resume-management-preview.component.scss
+++ b/resume-web/src/app/user/pages/resume-management/components/resume-management-preview/resume-management-preview.component.scss
@@ -264,6 +264,10 @@ $this: '.app-resume-management-form';
         color: #6C7A8E;
       }
     }
+
+    .text-nowrap {
+      white-space: nowrap;
+    }
   }
 }
 
